fix weird changes when deploying.
planning on rebuilding with gatsby. shouldn't take too long

--- a/src/base.scss
+++ b/src/base.scss
@@ -24,7 +24,7 @@ html, body {
     
     .fade-enter.fade-enter-active {
       opacity: 1;
-      transition: opacity 150ms ease;
+      transition: opacity 250ms ease;
     }
     .site {
       font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
