--- a/src/components/Navbar/_base.scss
+++ b/src/components/Navbar/_base.scss
@@ -56,7 +56,7 @@ header {
   }
 }
 
-@media (min-width: 715px) {
+@media (min-width: 737px) {
   header {
     position: fixed;
     width: 100%;
