--- a/src/scenes/BlogPost/_base.scss
+++ b/src/scenes/BlogPost/_base.scss
@@ -140,7 +140,7 @@
     .comments {
       width: 90vw;
       min-height: 347px;
-      padding: 20px 0px 0px 20px;
+      padding: 20px 20px 0px 20px;
       padding-top: 20px;
       margin: 0px auto;
     }
